Use the proper container for setting and retrieving the audit settings