@@ -67,6 +67,7 @@ import org.springframework.web.servlet.ModelAndView;
 import java.io.PrintWriter;
 import java.text.SimpleDateFormat;
 import java.util.Calendar;
+import java.util.Collections;
 import java.util.Date;
 import java.util.GregorianCalendar;
 import java.util.List;
@@ -527,12 +528,14 @@ public class AuditController extends SpringActionController
         @Override
         public void validateForm(AuditSettingsForm form, Errors errors)
         {
+            if (!getContainer().isAppHomeFolder())
+                errors.reject(ERROR_GENERIC, "This action is not supported for sub-folders of the application.");
             if (form.getRequireUserComments() == null)
                 errors.reject(ERROR_REQUIRED, "requireUserComments is required to be non-null.");
         }
 
         @Override
-        public Object execute(AuditSettingsForm form, BindException errors) throws Exception
+        public Object execute(AuditSettingsForm form, BindException errors)
         {
             ContainerManager.setRequireAuditComments(getContainer(), getUser(), form.getRequireUserComments());
             return success();
@@ -558,9 +561,12 @@ public class AuditController extends SpringActionController
     public static class GetAuditSettingsAction extends ReadOnlyApiAction<Object>
     {
         @Override
-        public Object execute(Object o, BindException errors) throws Exception
+        public Object execute(Object o, BindException errors)
         {
-            return Map.of(REQUIRE_USER_COMMENTS_PROPERTY_NAME, getContainer().getAuditCommentsRequired());
+            Container container = getContainer();
+            if (!container.isAppHomeFolder())
+                container = container.getProject();
+            return container == null ? Collections.emptyMap() : Map.of(REQUIRE_USER_COMMENTS_PROPERTY_NAME, container.getAuditCommentsRequired());
         }
     }
 }
